force-app/main/default/objects/promotionss__c/promotionss__c.object-meta.xml
<CustomObject>
    <label>promotionss</label>
    <nameField>
        <label>promotionss Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>promotionss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>