force-app/main/default/objects/promotionss__c/fields/Isterm__c.field-meta.xml
<CustomField>
    <fullName>Isterm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Isterm</label>
    <type>Checkbox</type>
</CustomField>