force-app/main/default/objects/promotionss__c/fields/promo_id__c.field-meta.xml
<CustomField>
    <fullName>promo_id__c</fullName>
    <label>promo id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>