force-app/main/default/objects/promotionss__c/fields/SterlingQuoteItem__c.field-meta.xml
<CustomField>
    <fullName>SterlingQuoteItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SterlingQuoteItem</label>
    <referenceTo>SterlingQuoteItem__c</referenceTo>
    <relationshipLabel>promotionss</relationshipLabel>
    <relationshipName>promotionss</relationshipName>
    <type>Lookup</type>
</CustomField>